<?xml version= "1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.mcbain.scouting2018.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="OpenMenu"
        android:text="@string/menu"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/version_.78"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/download"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="initData"
        android:text="@string/download_kettering"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="88dp"
        android:onClick="initData2"
        android:text="@string/download_traverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mcbainlogo" />

</android.support.constraint.ConstraintLayout>
